--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>ReactNotes</title>
-    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
 
   </head>
   <body>
     <div id="root"></div>
   </body>
-  <script src="../../build/bundle.js"></script>
+  <script src="/build/bundle.js"></script>
 </html>
